--- a/application.yml
+++ b/application.yml
@@ -3,9 +3,9 @@ APP_PORT: "8080"
 DB_DRIVER: "mysql"
 DB_HOST: "localhost"
 DB_PORT: 3306
-DB_NAME: "library_management_system" #db to be updated 
-DB_USER: "pranav"  #to be updated
-DB_PASSWORD: "12345" #to be updated 
+DB_NAME: "library_management_system" 
+DB_USER: "root"  #to be updated
+DB_PASSWORD: "Pradip@123" #to be updated 
 DB_MAX_POOL_SIZE: 5
 DB_MAX_OPEN_CONS: 5
 DB_MAX_LIFE_TIME_MINS: 30
